ingress.yaml
  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facerecog
  namespace: facerecog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  tls:
    - secretName: facerecog
      hosts:
        - facerecog.luizbossoi.com.br
  rules:
    - host: facerecog.luizbossoi.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: facerecog
                port:
                  number: 3000
